correction firefox

--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -59,6 +59,7 @@
 @media screen and (min-width: 768px) {
     .photo {
         height: 382px;
+        width: -moz-available;
     }
 }
 .box  {
